...
    lazy var tableView: UITableView = {
        let tableView = UITableView()
        tableView.backgroundColor = .white
        tableView.delegate = self
        tableView.dataSource = self
        tableView.register(TaskCell.self, forCellReuseIdentifier: CellIdentifier.taskCell.rawValue)
        tableView.accessibilityIdentifier = "ListTableView"
        
        return tableView
    }()
    
    override func viewDidLoad() {
        super.viewDidLoad()
...
    
    func setupView() {
        view.backgroundColor = .white
    }
    
    func setupNavigationBar() {
        let barButtonItem = UIBarButtonItem(title: "Add", style: .plain, target: self, action: #selector(addTapped))
        barButtonItem.accessibilityIdentifier = "Add"
        navigationItem.rightBarButtonItem = barButtonItem
        
    }
    
    @objc func addTapped() {
...
