...
        label.translatesAutoresizingMaskIntoConstraints = false
        label.accessibilityIdentifier = "mainLabel"
        
        return label
    }()
    
    lazy var additionalLabel: UILabel = {
        let label = UILabel()
        label.font = UIFont.systemFont(ofSize: 14)
        label.textColor = .gray
        label.numberOfLines = 1
        label.textAlignment = .left
        label.translatesAutoresizingMaskIntoConstraints = false
...
